<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.udacity.shoestore.viewmodel.ShoeViewModel" />
    </data>

    <!--Here we are using Linear Layout as all inputFields are listed on vertical order, no complexity or relative views found, so the linear layout is most fit for this screen -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ShoeDetailsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shoe_name_hint"
        style="@style/text_input_layout_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onTextChanged="@{(text,start,before,count) -> vm.newAddedShoe.setName(text.toString())}"
            android:text="@{vm.newAddedShoe.name}"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shoe_company_name_hint"
        style="@style/text_input_layout_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{vm.newAddedShoe.company}"
            android:onTextChanged="@{(text,start,before,count) -> vm.newAddedShoe.setCompany(text.toString())}"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_shoe_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shoe_size_hint"
        style="@style/text_input_layout_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_shoe_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{vm.newAddedShoe.size.toString()}"
            android:onTextChanged="@{(text,start,before,count) -> vm.newAddedShoe.setSize(text.toString())}"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_shoe_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shoe_description_hint"
        style="@style/text_input_layout_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_shoe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:text="@{vm.newAddedShoe.description}"
            android:onTextChanged="@{(text,start,before,count) -> vm.newAddedShoe.setDescription(text.toString())}"
            android:lines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_shoe_order"
        android:text="@string/shoe_save_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"/>

</LinearLayout>

</layout>